2007-02-15  Nathan Sidwell  <nathan@codesourcery.com>

	* config/m68k-parse.h (m68k_register): Add ROMBAR0, ASID.
	* config/tc-m68k.c (mcfv4e_ctrl): Add ColdFire specific names.
	(mcf5475_ctrl, mcf5485_ctrl): New.
	(m68k_cpus): Use mcf5485_ctrl and mcf5485_ctrl for those families.
	(m68k_ip): Add ASID, MMUBAR, ROMBAR0 handling.
	(init_table): Add asid, mmubar, adjust rombar0.

2007-02-14  Alan Modra  <amodra@bigpond.net.au>

	* config/tc-i386.h (Seg2ShortForm, Seg3ShortForm): Delete.
	* config/tc-i386.c: Wrap overly long lines, whitespace fixes.
	(process_operands): Move old Seg2ShortForm and Seg3ShortForm
	code, and test for these insns using a combination of
	opcode_modifier and operand_types.

2007-02-07  Paul Brook  <paul@codesourcery.com>

	* configure.tgt: Add arm*-*-uclinux-*eabi.

2007-02-05  Dave Brolley  <brolley@redhat.com>
	    Richard Sandiford  <rsandifo@redhat.com>
	    DJ Delorie  <dj@redhat.com>
	    Stan Cox  <scox@redhat.com>
	    Jim Blandy  <jimb@redhat.com>
	    Nick Clifton  <nickc@redhat.com>
	    Jim Wilson  <wilson@redhat.com>
	    Frank Ch. Eigler  <fche@redhat.com>
	    Graydon Hoare  <graydon@redhat.com>
	    Ben Elliston  <bje@redhat.com>
	    John Healy  <jhealy@redhat.com>
	    Richard Henderson  <rth@redhat.com>

	* Makefile.am (CPU_TYPES): Add mep.
	(TARGET_CPU_CFILES): Add tc-mep.c.
	(TARGET_CPU_HFILES): Add tc-mep.h.
	(DEPTC_mep_elf): New variable.
	(DEPTC_mep_coff): Likewise.
	(DEPOBJ_mep_coff, DEPOBJ_mep_elf, DEP_mep_coff, DEP_mep_elf): Likewise.
	* configure.in: Support mep.
	* configure.tgt: Likewise.
	* config/tc-mep.c: New file.
	* config/obj-elf.c: New file.
	* config/tc-mep.c: New file.
	* config/tc-mep.h: New file.
	* testsuite/gas/mep: New testsuite with content.
	* Makefile.in: Regenerate.
	* configure: Regenerate.

2007-02-05  Dave Brolley  <brolley@redhat.com>

	* cgen.c (gas_cgen_install_complex_reloc): Removed.
	(complex_reloc_installation_howto): Removed.

2007-02-05  Dave Brolley  <brolley@redhat.com>